--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Drag and Drop Two Images</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Image Comparer</title>
+		<link
+			rel="icon"
+			href="favicon.ico"
+			type="image/x-icon"
+		/>
 		<link
 			rel="stylesheet"
 			href="styles.css"
